# calendar-engine

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  crontab  docker-compose.yml  docker-entrypoint.sh  requirements-prod.txt  requirements.txt  setup.cfg
.github/workflows/: docker-build.yml
app/: __init__.py  __main__.py  cli.py  config.py  sync.py
app/common/: auth.py
app/contacts/: __init__.py  client.py  converter.py
app/holidays/: __init__.py  client.py  converter.py
app/tasks/: __init__.py  client.py  converter.py  recurrence.py
config/: README.md  config.sample.yaml
data/: README.md
docs/: README.md  contacts.md  docker-deployment.md  holidays.md  requirements.md  retry-configuration.md  tasks.md
logs/: README.md
tests/: __init__.py  test_config.py
tests/contacts/: __init__.py  test_converter.py
tests/tasks/: test_converter.py  test_recurrence.py
