[metadata]
name = calendar-engine
version = 1.0.0
author = Calendar Engine Contributors
description = Unified Google Calendar synchronization tool for Contacts and Tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finn-chan/calendar-engine
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Groupware

[options]
packages = find:
python_requires = >=3.8
install_requires =
    google-api-python-client>=2.100.0
    google-auth-httplib2>=0.1.1
    google-auth-oauthlib>=1.1.0
    icalendar>=5.0.0
    pytz>=2023.3
    PyYAML>=6.0
    lunarcalendar>=3.0.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.1.0
    mypy>=1.0.0

[options.entry_points]
console_scripts =
    calendar-engine = app.sync:main

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist

[isort]
profile = black
line_length = 100

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
